--- a/index.html
+++ b/index.html
@@ -55,6 +55,88 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
+      <section class="why-lease">
+        <div class="container">
+          <h2 class="section-title">
+            Why lease with D&M?
+          </h2>
+          <ul class="why-lease__list">
+            <li class="why-lease__item">
+              <img class="why-lease__item-img" src="images/why-lease-1.svg" alt="img">
+              <h3 class="why-lease__item-title">
+                Top Dealers
+              </h3>
+              <p class="why-lease__item-text">
+                TrueCar Certified Dealers compete for your business by providing discounted pricing on in-stock
+                inventory.
+              </p>
+            </li>
+            <li class="why-lease__item">
+              <img class="why-lease__item-img" src="images/why-lease-2.svg" alt="img">
+              <h3 class="why-lease__item-title">
+                Discounted Pricing
+              </h3>
+              <p class="why-lease__item-text">
+                View local inventory from the comfort of home and get access to guaranteed savings on the car of your
+                choice.
+              </p>
+            </li>
+            <li class="why-lease__item">
+              <img class="why-lease__item-img" src="images/why-lease-3.svg" alt="img">
+              <h3 class="why-lease__item-title">
+                Lower Payments
+              </h3>
+              <p class="why-lease__item-text">
+                Get discounted pricing when you shop for a car or truck using TrueCar and save on your lease payment.
+              </p>
+            </li>
+            <li class="why-lease__item">
+              <img class="why-lease__item-img" src="images/why-lease-4.svg" alt="img">
+              <h3 class="why-lease__item-title">
+                Easy Upgrade
+              </h3>
+              <p class="why-lease__item-text">
+                Easy to upgrade to the newest vehicle model every few years if you would like to be modern and
+                comfortable
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="how-work">
+        <div class="container">
+          <div class="how-work__inner">
+            <h2 class="section-title">
+              How Does Leasing Work?
+            </h2>
+            <p class="how-work__text">
+              Leasing a vehicle is essentially entering into a long term rental agreement for that vehicle. Unlike a
+              traditional car purchase, you don’t actually own the vehicle. Instead, a leasing company purchases the
+              vehicle from the dealer on your behalf and then you make monthly payments to the leasing company for the
+              duration of your lease. Some leases however, do provide the option to purchase the vehicle at the end of
+              the lease.
+            </p>
+            <h4 class="how-work__minititle">
+              Similar to a short term car rental, there are rules that define:
+            </h4>
+            <ol class="how-work__minititle-list">
+              <li class="how-work__minititle-item">
+                How much you can drive, stated as annual miles (excess miles are charged at a specified rate)
+              </li>
+              <li class="how-work__minititle-item">
+                Types of damage that you may be liable for at the end of your lease
+              </li>
+              <li class="how-work__minititle-item">
+                The procedures and costs when you return the vehicle at the end of your lease
+              </li>
+            </ol>
+            <p class="how-work__text">
+              Lease contracts are a commitment and ending them early can be difficult and expensive so it is important
+              to consider your circumstances carefully before you decide.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
