feat: add section video & important

--- a/index.html
+++ b/index.html
@@ -137,6 +137,58 @@
           </div>
         </div>
       </section>
+      <section class="video">
+        <div class="container">
+          <h2 class="section-title video-title">
+            Welcom to D&M Leasing
+          </h2>
+          <p class="video-text">
+            Find out how easy it is to lease from D&M
+          </p>
+          <iframe class="video-content" width="1000" height="500"
+            src="https://www.youtube.com/embed/V84qViTQ5s8?si=VFwr8Zt7fvxo-YK0&amp;controls=0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="important">
+        <div class="container">
+          <h2 class="section-title important-title">
+            Important Things to Consider
+          </h2>
+          <p class="important-text">
+            Depending on your circumstances and what is important to you, a lease could be a great option for your next
+            vehicle. Below are some important factors that may influence your decision.
+          </p>
+          <ul class="important-list">
+            <li class="important-item">
+              <img src="images/imp-1.jpg" alt="" class="important-item__img">
+              <p class="important-item__text">
+                Monthly payments on leases are generally 20% - 30% cheaper than loans
+              </p>
+            </li>
+            <li class="important-item">
+              <img src="images/imp-2.jpg" alt="" class="important-item__img">
+              <p class="important-item__text">
+                You may be eligible for a tax break if you use the leased vehicle for business purposes
+              </p>
+            </li>
+            <li class="important-item">
+              <img src="images/imp-3.jpg" alt="" class="important-item__img">
+              <p class="important-item__text">
+                Easy to upgrade to the newest vehicle model every few years
+              </p>
+            </li>
+            <li class="important-item">
+              <img src="images/imp-4.jpg" alt="" class="important-item__img">
+              <p class="important-item__text">
+                There are often fees charged if you drive more than your lease's mileage allowance
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
