feat: add contact us page

--- a/contacts.html
+++ b/contacts.html
@@ -16,12 +16,12 @@
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="images/logo.svg" alt="" class="logo__img">
           </a>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+              <li class="menu__list-item"><a href="new-cars.html" class="menu__list-link">NEW CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
@@ -32,7 +32,37 @@
       </div>
     </header>
     <main class="main">
-
+      <section class="contacts">
+        <div class="container">
+          <h2 class="section-title contact-title">Contact Us</h2>
+          <p class="contact-text">
+            Feel free to conact us with questions, potential partnerships or media inquiries
+          </p>
+          <form action="" class="form">
+            <input type="text" class="form-input" placeholder="Name">
+            <input type="e-mail" class="form-input" placeholder="E-mail">
+            <textarea class="form-textarea" placeholder="Your text"></textarea>
+            <button class="form-btn" type="submit">SUBMIT</button>
+          </form>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="container">
+          <div class="blog-list">
+            <div class="blog-item">
+              <img src="images/blog-1.jpg" alt="" class="blog-item__img">
+              <h4 class="blog-item__title">An easier way to buy your next Toyota</h4>
+              <a href="#" class="blog-item__link">more...</a>
+            </div>
+            <div class="blog-item">
+              <img src="images/blog-2.jpg" alt="" class="blog-item__img">
+              <h4 class="blog-item__title">A Guide to road-tripping whith Pets</h4>
+              <a href="#" class="blog-item__link">more...</a>
+            </div>
+          </div>
+          <a href="#" class="blog-aticles">SHOW MORE</a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
