--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           </a>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+              <li class="menu__list-item"><a href="new-cars.html" class="menu__list-link">NEW CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
-              <li class="menu__list-item"><a href="#" class="menu__list-link">CONTACT US</a></li>
+              <li class="menu__list-item"><a href="contacts.html" class="menu__list-link">CONTACT US</a></li>
             </ul>
           </nav>
         </div>
@@ -38,7 +38,7 @@
           <h1 class="title">
             Leasing from D&M
           </h1>
-          <a href="#" class="top__link">
+          <a href="new-cars.html" class="top__link">
             Find a Car
           </a>
         </div>
