feat: add new car page

--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,8 @@
               <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
-              <li class="menu__list-item"><a href="#" class="menu__list-link">CONTACT US</a></li>
+              <li class="menu__list-item"><a href="#" class="menu__list-link menu__list-link--active">CONTACT US</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -60,7 +61,7 @@
               <a href="#" class="blog-item__link">more...</a>
             </div>
           </div>
-          <a href="#" class="blog-aticles">SHOW MORE</a>
+          <a href="#" class="showmore-links">SHOW MORE</a>
         </div>
       </section>
     </main>
