--- a/new-cars.html
+++ b/new-cars.html
@@ -21,7 +21,7 @@
           </a>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+              <li class="menu__list-item"><a href="#" class="menu__list-link menu__list-link--active">NEW CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
               <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
@@ -33,6 +33,32 @@
     </header>
     <main class="main">
 
+      <section class="choose">
+        <div class="container">
+          <h2 class="section-title">
+            Choose your Car
+          </h2>
+          <a href="#" class="showmore-links">SHOW MORE</a>
+        </div>
+      </section>
+
+      <section class="blog">
+        <div class="container">
+          <div class="blog-list">
+            <div class="blog-item">
+              <img src="images/blog-1.jpg" alt="" class="blog-item__img">
+              <h4 class="blog-item__title">An easier way to buy your next Toyota</h4>
+              <a href="#" class="blog-item__link">more...</a>
+            </div>
+            <div class="blog-item">
+              <img src="images/blog-2.jpg" alt="" class="blog-item__img">
+              <h4 class="blog-item__title">A Guide to road-tripping whith Pets</h4>
+              <a href="#" class="blog-item__link">more...</a>
+            </div>
+          </div>
+          <a href="#" class="showmore-links">SHOW MORE</a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
