feat: add car-choose.js & change content by button

--- a/new-cars.html
+++ b/new-cars.html
@@ -42,7 +42,8 @@
             <div class="tabs-btn">
               <!-- в JS добавим функцию open для замены класса tabs-btn__item на active 
                 поэтому тут добавим data-button="content-1" а у кнопок tabs-content__item 
-                добавим id="content-1" -->
+                добавим id="content-1" 
+              data-button - это дата атрибут по нему в JS вставим контент -->
               <button class="tabs-btn__item tabs-btn__item--active" data-button="content-1">Car and Minivan</button>
               <button class="tabs-btn__item" data-button="content-2">Trucks</button>
               <button class="tabs-btn__item" data-button="content-3">Crossovers & SUVs</button>
@@ -50,7 +51,8 @@
             </div>
             <div class="tabs-content">
               <!-- id="content-1" связь в JS с кнопками tabs-btn__item -->
-              <div class="tabs-content__item" id="content-1">
+              <!-- tabs-content__item--active для смены контента JS-ом -->
+              <div class="tabs-content__item tabs-content__item--active" id="content-1">
                 <div class="card">
                   <img src="images/card-1.jpg" alt="" class="card-img">
                   <div class="card-content">
@@ -160,13 +162,67 @@
                   <a href="#" class="card-link">see details</a>
                 </div>
               </div>
-              <div class="tabs-content__item" id="content-2">2</div>
-              <div class="tabs-content__item" id="content-3">3</div>
-              <div class="tabs-content__item" id="content-4">4</div>
+              <div class="tabs-content__item" id="content-2">
+                <div class="card">
+                  <img src="images/card-12.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Toyota Crown 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 650/mo</p>
+                  </div>
+                  <a href="#" class="card-link">see details</a>
+                </div>
+                <div class="card">
+                  <img src="images/card-11.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Prius Prime 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 450/mo</p>
+                  </div>
+                  <a href="#" class="card-link">see details</a>
+                </div>
+                <div class="card">
+                  <img src="images/card-10.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Toyota Prius 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 400/mo</p>
+                  </div>
+                  <a href="#" class="card-link">see details</a>
+                </div>
+                <div class="card">
+                  <img src="images/card-9.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Hyundai Kona 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 510/mo</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="tabs-content__item" id="content-3">
+                <div class="card">
+                  <img src="images/card-8.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Hyundai Kona 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 510/mo</p>
+                  </div>
+                </div>
+              </div>
+              <div class="tabs-content__item" id="content-4">
+                <div class="card">
+                  <img src="images/card-7.jpg" alt="" class="card-img">
+                  <div class="card-content">
+                    <h4 class="card-title">Hyundai Kona 2023</h4>
+                    <p class="card-text">starting from $ 39900</p>
+                    <p class="card-price">$ 510/mo</p>
+                  </div>
+                </div>
+              </div>
             </div>
+            <a href="#" class="showmore-links">SHOW MORE</a>
           </div>
-          <a href="#" class="showmore-links">SHOW MORE</a>
-        </div>
       </section>
       <section class="blog">
         <div class="container">
@@ -257,8 +313,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/car-choose.js"></script>
 </body>
 
 </html>
